# Haunti-AI

./: Codebase Architecture  README.md
client-sdk/src/: client.ts  models.ts
client-sdk/src/utils/: crypto.ts  ipfs.ts
client-sdk/test/: integration.test.ts  unit.test.ts
compute-network/node/: Cargo.toml
compute-network/node/src/: fhe_executor.rs  main.rs  task_manager.rs  zk_prover.rs
compute-network/scheduler/deploy/: autoscaler.yaml  gpu-node.yaml
compute-network/scheduler/src/: bin_packing.rs  fault_detector.rs
cross-chain/chainlink/adapters/: data_feed.rs
cross-chain/chainlink/jobs/: model_metric_job.toml
cross-chain/wormhole/ethereum-client/src/: attestation.rs  task_relay.rs
cross-chain/wormhole/solana-client/src/: send_message.rs  verify_message.rs
haunti-core/: Cargo.toml  Xargo.toml
haunti-core/src/: lib.rs
haunti-core/src/instructions/: create_task.rs  mint_model.rs  submit_proof.rs
haunti-core/src/state/: model_state.rs  task_state.rs
monitoring/alerts/: high_latency_alert.rules
monitoring/grafana/: node_health.json  task_monitoring.json
monitoring/prometheus/: prometheus.yml
programs/model-nft/src/: lib.rs
programs/token-vault/src/: lib.rs
scripts/: deploy_protocol.sh  init_devnet.sh
web/admin/components/: ProposalCard.tsx
web/admin/pages/: governance.tsx
web/app/components/: ModelUpload.tsx  TaskMonitor.tsx
web/app/pages/: dashboard.tsx  index.tsx  marketplace.tsx
web/app/utils/: solana.ts  zkproof.ts
zero-knowledge-fhe/benches/: fhe_inference_bench.rs  fhe_training_bench.rs
zero-knowledge-fhe/src/: encrypted_infer.rs  encrypted_trainer.rs
zero-knowledge-fhe/src/keys/: private_key.rs  public_key.rs
zero-knowledge-zkml/circuits/: inference_verifier.circom  training_verifier.circom
zero-knowledge-zkml/prover/: gpu_accelerator.cu  plonky3_prover.rs
zero-knowledge-zkml/verifier/: solana_verifier.rs
