[package]
name = "haunti-compute-network"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/haunti-ai/compute-node"
description = "Decentralized AI Compute Orchestrator"
rust-version = "1.75.0"

[features]
default = ["gpu", "solana-mainnet"]
gpu = ["cuda", "ark-gpu"]
solana-mainnet = ["anchor-client/cluster-mainnet"]
solana-devnet = ["anchor-client/cluster-devnet"]
fhe = ["concrete", "fhe-toolkit"]
zk = ["plonky3", "circom-rs"]
metrics = ["prometheus", "metrics-exporter-prometheus"]

[dependencies]
# Core Blockchain
anchor-lang = { version = "0.29.0", features = ["seeds"] }
anchor-client = { version = "0.29.0", features = ["program"] }
solana-program = { version = "1.17.0", features = ["program"] }
solana-client = { version = "1.17.0", features = ["rpc-client"] }

# Cryptography
arkworks = [
    "ark-ff/0.4",
    "ark-poly/0.4",
    "ark-serialize/0.4",
    "ark-std/0.4",
]
ark-ff = { version = "0.4.0", features = ["parallel"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
plonky3 = { git = "https://github.com/chain/plonky3", features = ["full"] }
circom-rs = { version = "0.8.0", features = ["ark"] }

# FHE
concrete = { version = "0.5.0", features = ["gpu"] }
fhe-toolkit = { git = "https://github.com/zama-ai/tfhe-rs", features = ["gpu"] }

# GPU Acceleration
cuda = { version = "0.2.0", features = ["driver"] }
nvtx = "0.2.0"
cublas-sys = { version = "0.4.0", optional = true }

# Distributed Computing
libp2p = { version = "0.53.0", features = ["full"] }
ipfs-embed = { version = "0.17.0", features = ["sled"] }

# Metrics & Observability
prometheus = { version = "0.13.0", features = ["process"] }
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.0", optional = true }

# Utilities
borsh = "0.10.0"
serde = { version = "1.0.195", features = ["derive"] }
rayon = { version = "1.8.0", features = ["threads"] }
thiserror = "1.0.50"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
# Testing Framework
solana-test-validator = { version = "1.17.0", features = ["full"] }
tokio = { version = "1.35.0", features = ["full"] }
test-case = "3.3.1"

# Benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1.1"

# Mocking
mockito = "1.2.0"
mockall = "0.11.4"

[build-dependencies]
solana-build-tools = { version = "1.17.0", features = ["version"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
incremental = false

[profile.bench]
inherits = "release"
debug = false

[workspace]
members = [
    "compute-network",
    "zk-prover",
    "fhe-engine"
]
resolver = "2"
